<resources>
    <string name="app_name">AndroidSqlite</string>
    <string name="ubah">Ubah</string>
    <string name="simpan">Simpan</string>
    <string name="baru">Baru</string>
    <string name="hapus">Hapus</string>
    <string name="masukkan_kode_pelanggan">Masukkan Kode Pelanggan</string>
    <string name="masukkan_nama">Masukkan Nama</string>
    <string name="no_ponsel">No. Ponsel</string>
    <string name="kode_pelanggan">Kode Pelanggan</string>
    <string name="nama_pelanggan">Nama Pelanggan</string>
    <string name="no_telp">No. Telp</string>
</resources>